[gd_scene load_steps=6 format=2]

[ext_resource path="res://ressources/img/items.png" type="Texture" id=1]
[ext_resource path="res://ressources/script/ammu/rocket.gd" type="Script" id=2]
[ext_resource path="res://ressources/img/item_progbar/rocket/rocket_progressbarV.png" type="Texture" id=3]
[ext_resource path="res://ressources/img/item_progbar/rocket/rocket_progressbar_bg.png" type="Texture" id=4]
[ext_resource path="res://ressources/sound/turbine.wav" type="AudioStream" id=5]

[node name="rocket" type="RigidBody2D"]
collision_layer = 512
collision_mask = 127
can_sleep = false
script = ExtResource( 2 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 15, 145, 33, 30 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -17, 14, -9, 14, -9, 15, 8, 15, 8, 14, 16, 14, 16, 11, 15, 11, 15, 10, 14, 10, 14, 8, 13, 8, 13, 7, 12, 7, 12, 6, 11, 6, 11, 6, 11, 5, 10, 5, 10, 4, 9, 4, 9, 3, 8, 3, 8, -11, 7, -11, 7, -12, 6, -12, 6, -13, 4, -13, 4, -14, 1, -15, -2, -15, -5, -14, -5, -13, -7, -13, -7, -12, -8, -12, -8, -11, -9, -11, -9, 3, -10, 3, -10, 4, -11, 4, -11, 5, -12, 5, -12, 6, -13, 6, -13, 7, -14, 7, -14, 9, -15, 9, -15, 10, -16, 10, -16, 11, -17, 11 )

[node name="texture_progress" type="TextureProgress" parent="."]
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 3 )
fill_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="audiostreamplayer2D_motor" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[connection signal="body_entered" from="." to="." method="_on_rocket_body_entered"]
[connection signal="body_shape_entered" from="." to="." method="_on_rocket_body_shape_entered"]
